🐛 (Button & NavBar): Fix wrong colours of the nav icon button

--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -14,7 +14,7 @@ button.btn {
   min-width: 64px;
   max-width: 100%;
   transition: all 300ms;
-  background-color: #f5f5f5;
+  background-color: transparent;
   vertical-align: middle;
 
   .content {
